--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = git@github.com:sync-for-science/discovery-web-ui.git
 [submodule "procure-wip"]
 	path = procure-wip
-	url = git@github.com:sync-for-science/procure-wip.git
+	url = git@github.com:Vermonster/procure-wip.git
 [submodule "discovery-data-server"]
 	path = discovery-data-server
 	url = git@github.com:sync-for-science/discovery-data-server.git
