--- a/s4s-cluster/templates/data-server-service.yaml
+++ b/s4s-cluster/templates/data-server-service.yaml
@@ -9,7 +9,7 @@ metadata:
     io.kompose.service: data-server
   name: data-server
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - name: "8081"
       port: 8081
