--- a/s4s-cluster/templates/procure-wip-service.yaml
+++ b/s4s-cluster/templates/procure-wip-service.yaml
@@ -9,7 +9,7 @@ metadata:
     io.kompose.service: procure-wip
   name: procure-wip
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - name: "4000"
       port: 4000
