--- a/s4s-cluster/templates/web-service.yaml
+++ b/s4s-cluster/templates/web-service.yaml
@@ -9,7 +9,7 @@ metadata:
     io.kompose.service: web
   name: web
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - name: "3000"
       port: 3000
